# PurLong

./: CMakeLists.txt
src/: purlong.cpp  purlong.h  purmath.cpp  purmath.h
tests/: arithmeticOperationsTest.cpp  comparisionsTest.cpp  mainTest.cpp  representationTest.cpp  sumTest.cpp
